--- a/src/components/game01/game01.css
+++ b/src/components/game01/game01.css
@@ -5,20 +5,20 @@
   transform: translate(-50%, -50%);
   flex-direction: column;
 }
+
 #buttonRestartContainer {
   display: block;
   margin-top: 20px;
 }
+
 .board {
   display: grid;
   grid-template-columns: repeat(3, 150px);
   grid-template-rows: repeat(3, 150px);
-
   margin: 0 auto;
-  margin-bottom: 20px;
-
-  background-color: #fff;
-  border-radius: 10px;
+  margin-bottom: var(--pc-margin-m);
+  background-color: var(--pc-color-white);
+  border-radius: 8px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
 
@@ -39,18 +39,20 @@
   background-color: #ccc;
   transition: background-color 0.3s ease;
 }
+
 .message {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translateX(-50%);
   font-size: 70px;
-  color: #ffff;
+  color: var(--pc-color-white);
   animation: slideIn 1s ease forwards;
   opacity: 0;
-  padding: 20px;
+  padding: var(--pc-padding-m);
   white-space: nowrap;
 }
+
 .message::before {
   content: '';
   position: absolute;
@@ -58,12 +60,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(
-    255,
-    153,
-    204,
-    0.9
-  ); /* Cambia la opacidad según lo desees */
+  background-color: rgba(255, 153, 204, 0.9);
   z-index: -1;
 }
 
@@ -78,46 +75,30 @@
   }
 }
 
-.cell::before {
-  content: ''; /* Puedes usar un icono en lugar de texto */
-}
-
-.cell.O::before {
-  content: ''; /* También puedes usar un icono */
-}
-
 @media screen and (max-width: 500px) {
   .board {
-    grid-template-columns: repeat(
-      3,
-      115px
-    ); /* Ajusta el ancho de las columnas para dispositivos móviles */
-    grid-template-rows: repeat(
-      3,
-      115px
-    ); /* Ajusta la altura de las filas para dispositivos móviles */
+    grid-template-columns: repeat(3, 115px);
+    grid-template-rows: repeat(3, 115px);
   }
 
   .cell {
-    width: 115px; /* Ajusta el ancho de las celdas para dispositivos móviles */
-    height: 115px; /* Ajusta la altura de las celdas para dispositivos móviles */
-    font-size: 18px; /* Ajusta el tamaño de la fuente para dispositivos móviles */
-    border: 1px solid #333; /* Ajusta el grosor del borde para dispositivos móviles */
+    width: 115px;
+    height: 115px;
+    font-size: 18px;
+    border: 1px solid #333;
   }
 
   .message {
-    font-size: 40px; /* Ajusta el tamaño de la fuente para dispositivos móviles */
-    padding: 10px; /* Ajusta el espacio de relleno para dispositivos móviles */
+    font-size: 40px;
+    padding: var(--pc-padding-s);
   }
 
   @keyframes slideIn {
     from {
-      top: -50px; /* Ajusta la posición inicial para dispositivos móviles */
+      top: -50px;
     }
     to {
-      top: calc(
-        50% - 25px
-      ); /* Ajusta la posición final para dispositivos móviles */
+      top: calc(50% - 25px);
     }
   }
 }
