--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-/* GLOBAL STYLES */
-
-@import url('https://fonts.googleapis.com/css2?family=Anton&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Quicksand:wght@300..700&display=swap');
 
 * {
   margin: 0;
@@ -9,23 +7,21 @@
   text-decoration: none;
   box-sizing: border-box;
   font-family: var(--pc-primary-font);
+  font-weight: bold;
 }
 
 :root {
-  /* COLORS */
-  --pc-color-1: #f2f2f2;
-  --pc-color-2: #674809;
-  --pc-color-3: #1c1402;
+  /* Colors */
+  --pc-color-white: #ffffff;
+  --pc-color-grey: #f2f2f2;
+  --pc-color-black: #1c1402;
+  --pc-color-pink: #ff99cc;
+  --pc-color-pinkDark: #ff66b3;
 
-  --pc-bgColor: var(--pc-color-1);
-  --pc-special-color: var(--pc-color-2);
-  --pc-textColor: var(--pc-color-3);
+  /* Fonts */
+  --pc-primary-font: 'Quicksand', sans-serif;
 
-  /* FONTS */
-  --pc-primary-font: 'Lato', sans-serif;
-  --pc-highlight-font: 'Anton', sans-serif;
-
-  /* SPACINGS */
+  /* Spacing */
   --pc-margin-xs: 5px;
   --pc-margin-s: 10px;
   --pc-margin-m: 20px;
@@ -44,10 +40,10 @@
   --pc-gap-l: 30px;
   --pc-gap-xl: 50px;
 }
+
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: #f5f5f5;
 }
 
@@ -61,14 +57,13 @@ body {
 
 .buttonRestart {
   margin: 0 auto;
-  background-color: white;
-  color: #ff99cc;
+  background-color: var(--pc-color-white);
+  color: var(--pc-color-pink);
   padding: 15px;
-  border: 2px solid #ff66b3;
+  border: 2px solid var(--pc-color-pinkDark);
   border-radius: 8px;
   cursor: pointer;
-  font-size: 18px;
-  font-weight: bold;
+  font-size: 20px;
   text-transform: uppercase;
   transition: background-color 0.3s ease;
 }
@@ -77,34 +72,24 @@ body {
   position: absolute;
   top: 0;
   left: 8em;
-
   transform: translateX(-50%);
-  background-color: white;
-  color: #ff99cc;
+  background-color: var(--pc-color-white);
+  color: var(--pc-color-pink);
   padding: 10px 20px;
-  border: 2px solid #ff66b3;
-  border-radius: 4px;
+  border: 2px solid var(--pc-color-pinkDark);
+  border-radius: 8px;
   cursor: pointer;
   font-size: 20px;
   font-weight: bold;
   text-transform: uppercase;
   transition: background-color 0.3s ease;
 }
-article button:hover {
-  background-color: #ff66b3; /* Rosa más claro al pasar el ratón */
+
+#buttonMenu:hover {
+  background-color: var(--pc-color-pinkDark);
+  color: var(--pc-color-white);
 }
 
-.message {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%);
-  font-size: 70px;
-  color: #ffff;
-  animation: slideIn 1s ease forwards;
-  opacity: 0;
-  padding: 20px;
-}
 .message::before {
   content: '';
   position: absolute;
@@ -112,17 +97,13 @@ article button:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(
-    255,
-    153,
-    204,
-    0.9
-  ); /* Cambia la opacidad según lo desees */
+  color: var(--pc-color-white);
+  background-color: rgba(255, 153, 204, 0.9);
   z-index: -1;
 }
 
 .message:empty::before {
-  content: none; /* Oculta el cuadro rosa cuando el mensaje está oculto */
+  content: none;
 }
 @keyframes slideIn {
   from {
