--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,10 +1,10 @@
 #containerGames {
   overflow: auto;
   position: absolute;
-  top: 110px;
+  top: 10svh;
   z-index: 1;
   width: 100%;
-  height: 82svh;
+  height: 90svh;
   display: flex;
   justify-content: space-around;
   gap: var(--pc-gap-l);
@@ -15,6 +15,7 @@
 #game02,
 #game03 {
   position: relative;
+
   min-width: 300px;
   width: 30%;
   height: 70%;
@@ -84,6 +85,19 @@ article button:hover {
   #containerGames {
     margin-top: var(--pc-margin-m);
     margin-bottom: var(--pc-margin-m);
-    padding: var(--pc-padding-xl);
+    padding: var(--pc-padding-l);
+  }
+
+  #game01,
+  #game02,
+  #game03 {
+    height: 55%;
+  }
+}
+
+@media screen and (max-width: 430px) {
+  #calledNumbersGrid {
+    margin-left: 5px;
+    margin-right: 5px;
   }
 }
