--- a/src/components/game03/game03.css
+++ b/src/components/game03/game03.css
@@ -22,7 +22,7 @@ button {
 }
 
 .messageNum {
-  font-size: 30px;
+  font-size: 25px;
   text-align: center;
 }
 
@@ -50,7 +50,25 @@ button {
   }
 }
 
+@media screen and (max-width: 990px) {
+  .firstMessage {
+    font-size: 2em;
+  }
+  .messageNum {
+    font-size: 1.5em;
+  }
+  #winMessage03 {
+    font-size: 2.5em;
+  }
+}
+
 @media screen and (max-width: 925px) {
+  .firstMessage {
+    font-size: 1.8em;
+  }
+  .messageNum {
+    font-size: 1.3em;
+  }
   #winMessage03 {
     font-size: 2.5em;
   }
@@ -60,6 +78,12 @@ button {
   #numGame,
   .firstMessage {
     margin-top: 0px;
+  }
+  .firstMessage {
+    font-size: 1.8em;
+  }
+  .messageNum {
+    font-size: 1.1em;
   }
   #winMessage03 {
     font-size: 1.3em;
