--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,7 @@
 header {
   background-color: #333;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 10svh;
   display: flex;
@@ -8,13 +10,12 @@ header {
   align-items: center;
   padding: var(--rtc--padding-m);
   position: fixed;
-  z-index: 2;
 }
 
 h1 {
   width: 100%;
   margin: 0;
-  font-size: 50px;
+  font-size: 45px;
   padding: var(--pc-padding-s);
   text-align: center;
   letter-spacing: 2px;
