--- a/src/components/game02/game02.css
+++ b/src/components/game02/game02.css
@@ -3,7 +3,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  gap: 15px;
+  gap: 10px;
   flex-direction: column;
 
   margin-bottom: 100px;
@@ -13,7 +13,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 10px;
 }
 
 .bingo-board {
@@ -38,12 +37,11 @@
 
 #callNumberBtn {
   display: block;
-  margin: 0 auto;
+  margin: 0;
 }
 
 #calledNumberDisplay {
   font-size: 25px;
-  margin-bottom: var(--pc-margin-xs);
 }
 
 button {
